# zellij_mcp

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.sisyphus/evidence/: f1-phase-compliance.txt  f2-code-quality.txt  f3-manual-qa.txt  f4-scope-fidelity.txt  i6-interactive-first-local-a100.txt  phase-1-contract-parity.txt  phase-1-no-external-binary.txt  phase-2-capture-semantics.txt  phase-2-remote-pane-loop.txt  phase-3-busy-recovery.txt  phase-3-remote-spawn.txt  phase-4-readiness-matrix.txt  phase-4-version-handshake.txt  phase-5-final-cleanup.txt
.sisyphus/plans/: zjctl-absorption-phase-plan.md
crates/zjctl-proto/src/: lib.rs  protocol.rs  selector.rs
crates/zrpc/: README.md
crates/zrpc/src/: main.rs  state.rs
docs/: architecture.md  mcp-contract.md  phase-2-backlog.md  ssh-remote-design.md
openspec/changes/cleanup-retention-policies/: README.md  design.md  proposal.md  tasks.md
openspec/changes/default-pane-and-command-wrapper/: design.md  proposal.md  tasks.md
openspec/changes/embedded-wrapper-bootstrap/: design.md  proposal.md  tasks.md
scripts/: __zellij_mcp_run_b64.fish  package-release  zellij-mcp-bootstrap-ssh  zellij-mcp-ssh
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/domain/: binding.rs  errors.rs  mod.rs  observation.rs  requests.rs  responses.rs  status.rs
src/persistence/: mod.rs  observation_store.rs  registry_store.rs
src/server/: daemon_identity.rs  mcp.rs  mod.rs  rmcp_stdio.rs
src/services/: mod.rs  router.rs  terminal.rs
tests/: zellij-mcp-bootstrap-ssh.sh  zellij-mcp-ssh.sh
(+43 files in other folders)
